k8s/authority-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ambience-authority-client
  namespace: ambience
spec:
  selector:
    app: ambience
    component: authority
  ports:
    - name: http
      port: 80
      targetPort: http
