k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ambience
  namespace: ambience
spec:
  selector:
    app: ambience
  ports:
    - name: http
      port: 80
      targetPort: http
